--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1117,14 +1117,14 @@
     },
     "ThankYouPage": {
         "Title": "Thank you for your interest in joining the Rare Genomes Project",
-        "Paragraph1": "Unfortunately, your responses to our pre-screening questionnaire do not match the <a href=\"eligibility-criteria\" class=\"Link\">current requirements for participation</a> in the study. The Rare Genomes Project can only accept applications from families who meet all of these conditions:",
+        "Paragraph1": "Unfortunately, your responses to our pre-screening questionnaire do not match the <a href=\"/eligibility-criteria\" class=\"Link\">current requirements for participation</a> in the study. The Rare Genomes Project can only accept applications from families who meet all of these conditions:",
         "List": [
             "Understand English or Spanish",
             "Live in the United States",
-            "Have a rare and undiagnosed genetic condition",
-            "Are currently under the care of a doctor helping to figure out the cause of the patient's condition"
+            "Have a rare and genetically undiagnosed condition",
+            "Are currently under the care of a medical provider who is helping to understand the cause of your condition"
         ],
-        "Paragraph2": "Over time, we may be able to expand the project. We hope you will join our mailing list. If you do, we will contact you if participation requirements change, making you eligible to apply to the study.",
+        "Paragraph2": "Over time, we may be able to expand the project. If you join our mailing list below, we can contact you if these participation requirements change.",
         "Form": {
             "Label": "Email Address *",
             "Error": "Please enter a valid Email Address",
