--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -64,13 +64,13 @@
             "Involved": {
                 "Title": "Get Involved",
                 "Subtitle": "Join the research community.",
-                "Text": "The Rare Genomes Project is supported by The Broad Institute of MIT and Harvard in partnership with patients and advocates like you. We believe that families should be at the center of research involving their diseases, and encourage the involvement of families and the advocacy groups that support them throughout the study.",
+                "Text": "The Rare Genomes Project is supported by The Broad Institute of MIT and Harvard in partnership with patients and rare disease advocates. We believe that families should be at the center of research involving their diseases, and encourage the involvement of families and the advocacy groups that support them throughout the study.",
                 "Alt": "Get Involved"
             },
             "Data": {
                 "Title": "Share Data",
                 "Subtitle": "Data sharing is crucial for improving diagnosis rates of rare disease worldwide.",
-                "Text1": "The genetic information generated in this project will be shared with other scientists to ensure it has the widest possible impact. Your genetic data can help families like yours and improve scientists’ understanding of rare disease. Learn more about our data sharing policies",
+                "Text1": "The genetic information generated in this project will be shared with other scientists to ensure it has the widest possible impact. Your genetic data can help other families and improve scientists’ understanding of rare disease. Learn more about our data sharing policies",
                 "Text2": "here",
                 "Alt": "Share Data"
             }
@@ -81,7 +81,7 @@
                 "Title": "Tell us your story",
                 "Text1": "Click",
                 "Text2": "apply",
-                "Text3": "to see a broad overview of the study and learn how you can start an application where you can tell us about the history of rare disease in your family. The information will be reviewed by our study team, and eligible families will be invited to participate. We will contact you to arrange a detailed discussion about the study and send you a consent form.",
+                "Text3": "to see a broad overview of the study and learn how you can start an application. The information will be reviewed by our study team, and eligible families will be invited to participate. We will arrange a time to have a detailed discussion about the study and send a consent form.",
                 "Alt": "Tell us your story"
             },
             "Two": {
@@ -756,12 +756,12 @@
         "Items": [
             {
                 "title": "Get to know our project",
-                "text": "The Rare Genomes Project is a research study focused on patients and families with <span class=\"Accent\">rare and genetically undiagnosed conditions</span>. We use genomic sequencing to search for the cause of rare disease in these families and hope to accelerate the rate of rare disease diagnosis in the process. For more information, please watch our informational video (click <a href=\"https://youtu.be/ux4_MwSALrc\" target=\"_blank\" class=\"Link\">here</a> to watch), review our <a href=\"/eligibility-criteria\" class=\"Link\">eligibility criteria</a>, and read through the steps below.",
+                "text": "The Rare Genomes Project is a research study focused on patients and families with <span class=\"Accent\">rare and genetically undiagnosed conditions</span>. We use genomic sequencing to search for the cause of rare disease in these families and hope to accelerate the rate of rare disease diagnosis in the process. For more information, review our <a href=\"/eligibility-criteria\" class=\"Link\">eligibility criteria</a> and read through the steps below.",
                 "image": "/assets/images/step-1.jpg "
             },
             {
                 "title": "Tell us about your family",
-                "text": "During the application process, we will ask about the rare, suspected genetic disease in your family, limited demographic information, family history information, and the results of previous genetic and other tests. After you complete your application, our study team will review the information you submit to determine if you are a good fit for the study. If so, we will set up a consent session with your family to explain the study and make sure that all of your questions are answered before sending you a consent document to sign.",
+                "text": "During the application process, we will ask about the rare, suspected genetic disease in your family, limited demographic information, family history information, and the results of previous genetic and other tests. After you complete your application, our study team will review the information you submit to determine if you are a good fit for the study. If so, we will set up a video meeting or phone conference with you and your family to explain the study and make sure that all of your questions are answered. Each person in the family will receive a consent document to sign to participate.",
                 "image": "/assets/images/step-2.jpg "
             },
             {
@@ -791,7 +791,7 @@
             },
             {
                 "title": "Receive clinically significant results",
-                "text": "If we find results that we believe may explain the cause of the rare condition present in your family, we will contact you and ask if you would like to have the findings confirmed in a clinical laboratory. If you do, we will work with you and your doctor to return the results to you.",
+                "text": "If we find results that we believe may explain the cause of your rare condition, we will contact you and ask if you would like to have the findings confirmed with our clinical laboratory partner, the Laboratory for Molecular Medicine (LMM) in Cambridge, MA. If you do, we will work with you and your doctor to return the results to you.",
                 "image": "/assets/images/step-8.jpg "
             }
         ],
@@ -954,7 +954,7 @@
                 "Have had prior genetic testing that was negative or did not provide a full genetic explanation*",
                 "Are currently under the care of a neurologist, medical geneticist, or relevant subspecialist",
                 "Live in the United States",
-                "Are English-speaking"
+                "Are English- or Spanish-speaking"
             ],
             "Ending": {
                 "Text1": "*If you are unsure whether you have a clinical diagnosis of LGMD or you have not had prior genetic testing for your LGMD, you may still be eligible to participate and are encouraged to apply by",
@@ -966,8 +966,8 @@
             "One": {
                 "Title": "Tell us your story",
                 "Text1": "Click",
-                "Text2": "apply",
-                "Text3": "to tell us about the history of LGMD in your family. The information will be reviewed by our study team, and eligible families will be invited to participate. We will contact you to arrange a detailed discussion about the study and send you a consent form.",
+                "Text2": "Apply",
+                "Text3": "to see a broad overview of the study and learn how you can start an application. The information will be reviewed by our study team, and eligible families will be invited to participate. We will arrange a time to have a detailed discussion about the study and send a consent form.",
                 "Alt": "Tell us your story"
             },
             "Two": {
@@ -1018,7 +1018,7 @@
                 "Item2": "Do <span class=\"Accent\">NOT</span> have a condition with a low suspicion of a single gene cause, such as <a href=\"https://cleftline.org/family-resources/introduction-to-cleft-craniofacial-conditions/\" target=\"_blank\" class=\"Link Link--blue\"> isolated cleft lip and/or palate</a>, isolated <a href=\"http://www.childrenshospital.org/conditions-and-treatments/conditions/m/microtia\" target=\"_blank\" class=\"Link Link--blue\">microtia</a>, or <a href=\"https://rarediseases.info.nih.gov/diseases/6582/hemifacial-microsomia\" target=\"_blank\" class=\"Link Link--blue\">hemifacial microsomia</a>",
                 "Item3": "Are currently under the care of a medical geneticist or relevant subspecialist",
                 "Item4": "Live in the United States",
-                "Item5": "Are English-speaking"
+                "Item5": "Are English- or Spanish-speaking"
             }
         },
         "Steps": {
@@ -1026,8 +1026,8 @@
             "One": {
                 "Title": "Tell us your story",
                 "Text1": "Click",
-                "Text2": "apply",
-                "Text3": "to tell us about the history of the craniofacial condition in your family. The information will be reviewed by our study team, and eligible families will be invited to participate. We will contact you to arrange a detailed discussion about the study and send you a consent form.",
+                "Text2": "Apply",
+                "Text3": "to see a broad overview of the study and learn how you can start an application. The information will be reviewed by our study team, and eligible families will be invited to participate. We will arrange a time to have a detailed discussion about the study and send a consent form.",
                 "Alt": "Tell us your story"
             },
             "Two": {
@@ -1043,7 +1043,7 @@
         },
         "Info": {
             "Title": "Information and Resources",
-            "Text": "Additional information and resources for individuals with isolated and syndromic craniofacial conditions can be found here: <a href=\"https://www.shrinershospitalsforchildren.org/boston/cleftlippalate\" target=\"_blank\" class=\"Link Accent\">Shriners Hospitals for Children</a>, the <a href=\"https://acpa-cpf.org\" target=\"_blank\" class=\"Link Accent\">American Cleft Palate and Craniofacial Association</a>, <a href=\"https://www.ncbi.nlm.nih.gov/books/NBK1116/\" target=\"_blank\" class=\"Link Accent\">GeneReviews</a>, and the <a href=\"https://ghr.nlm.nih.gov/\" target=\"_blank\" class=\"Link Accent\">Genetics Home Reference</a>."
+            "Text": "Additional information and resources for individuals with isolated and syndromic craniofacial conditions can be found here: <a href=\"https://www.shrinershospitalsforchildren.org/boston/cleftlippalate\" target=\"_blank\" class=\"Link Accent\">Shriners Hospitals for Children</a>, the <a href=\"https://acpa-cpf.org\" target=\"_blank\" class=\"Link Accent\">American Cleft Palate and Craniofacial Association</a>, <a href=\"https://www.ncbi.nlm.nih.gov/books/NBK1116/\" target=\"_blank\" class=\"Link Accent\">GeneReviews</a>, and the <a href=\"https://medlineplus.gov/genetics/condition/limb-girdle-muscular-dystrophy/#definition\" target=\"_blank\" class=\"Link Accent\">U.S. National Library of Medicine Medline Plus</a>."
         }
     },
     "DashboardPage": {
@@ -1117,14 +1117,14 @@
     },
     "ThankYouPage": {
         "Title": "Thank you for your interest in joining the Rare Genomes Project",
-        "Paragraph1": "Unfortunately, your responses to our pre-screening questionnaire do not match the <a href=\"eligibility-criteria\" class=\"Link\">current requirements for participation</a> in the study. The Rare Genomes Project can only accept applications from families who meet all of these conditions:",
+        "Paragraph1": "Unfortunately, your responses to our pre-screening questionnaire do not match the <a href=\"/eligibility-criteria\" class=\"Link\">current requirements for participation</a> in the study. The Rare Genomes Project can only accept applications from families who meet all of these conditions:",
         "List": [
             "Understand English or Spanish",
             "Live in the United States",
-            "Have a rare and undiagnosed genetic condition",
-            "Are currently under the care of a doctor helping to figure out the cause of the patient's condition"
+            "Have a rare and genetically undiagnosed condition",
+            "Are currently under the care of a medical provider who is helping to understand the cause of your condition"
         ],
-        "Paragraph2": "Over time, we may be able to expand the project. We hope you will join our mailing list. If you do, we will contact you if participation requirements change, making you eligible to apply to the study.",
+        "Paragraph2": "Over time, we may be able to expand the project. If you join our mailing list below, we can contact you if these participation requirements change.",
         "Form": {
             "Label": "Email Address *",
             "Error": "Please enter a valid Email Address",
