rgp: more about-us bio edits

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -172,7 +172,7 @@
                         "name": "Brian Mangilog",
                         "degree": "",
                         "position": "Clinical Project Coordinator",
-                        "bio": "Brian is a clinical project coordinator for the Rare Genomes Project, focusing on consenting families to the study and outreach efforts. He studied neurobiology as an undergraduate and has experience in patient advocacy and community outreach.",
+                        "bio": "Brian is a clinical project coordinator for the Rare Genomes Project, focusing on family engagement with the study and outreach to the rare disease community. He has a background in neurobiology and patient advocacy.",
                         "image": "brian-mangilog.jpeg"
                     },
                     {
@@ -308,8 +308,8 @@
                         {
                             "name": "Lynn Pais",
                             "degree": "MS",
-                            "position": "Genomic Analyst",
-                            "bio": "Lynn is a genomic variant analyst who performs exome and genome analyses for families with rare disease. She has a master’s degree in human genetics and previously worked as a project manager for a genetic research study at Brigham and Women’s Hospital.",
+                            "position": "Clinical Genomic Analyst",
+                            "bio": "Lynn is a senior clinical genomic analyst working to improve genetic diagnoses for families with rare genetic conditions. She is trained in genetic counseling and has over eight years of experience in clinical genetics and research settings.",
                             "image": "lynn-pais.jpg"
                         },
                         {
