DDP-5811: Prion: Update medical questionnaire longitudinal tracking: configured edit button and created Prion-specific activity list and dashboard that will display a separate button for the medical questionnaire once it has been completed at least once

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -605,7 +605,7 @@
     "NextButton": "Siguiente <span class=\"Icon fa fa-chevron-right\"></span> ",
     "PreviousButton": " <span class=\"Icon fa fa-chevron-left\"></span> Anterior",
     "SavingButton": "Guardando...",
-    "EditButton": "Continuar",
+    "EditButton": "Ver",
     "StartButton": "Iniciar",
     "ReviewButton": "Ver",
     "ValidateError": "Complete todos los campos obligatorios.",
