--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
@@ -605,7 +605,7 @@
     "NextButton": "Next <span class=\"Icon fa fa-chevron-right\"></span> ",
     "PreviousButton": " <span class=\"Icon fa fa-chevron-left\"></span> Prev",
     "SavingButton": "Saving",
-    "EditButton": "Update",
+    "EditButton": "Review",
     "StartButton": "Start",
     "ReviewButton": "View",
     "ValidateError": "Please complete all required fields.",
