Circadia: add DLMO scheduling instructions activity handling logic

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -113,6 +113,7 @@
   "UserActivities": {
     "Header": {
       "Name": "Name",
+      "Summary": "Summary",
       "Status": "Status",
       "Actions": "Actions"
     },
@@ -124,7 +125,8 @@
     "Actions": {
       "Start": "Start",
       "Continue": "Continue",
-      "View": "View"
+      "View": "View",
+      "Schedule": "Schedule"
     }
   },
   "SessionWillExpire": {
